--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,4 +3,75 @@
   justify-content: space-around;
   align-items: center;
   background-color: #ddd;
+  height: 50px;
+  position: relative;
+  .burger-btn {
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+    }
+    &::before {
+      top:8px;
+    }
+    &::after {
+      bottom: 8px,
+    }
+    &.open {
+      position: absolute;
+      width: 0;
+      &::after,
+      &::before {
+        background-color: #fff;
+        width: 25px;
+        height: 4px;
+      }
+      &::before {
+        transform: rotate(45deg) translateX(8px) translateY(-22px);
+      }
+      &::after {
+        transform: rotate(-45deg) translateX(10px) translateY(20px);
+      }
+    }
+  }
+  .burger-btn,
+  .burger-btn::before,
+  .burger-btn::after {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    border-radius: 5px;
+    transition: all .3s ease-in-out; 
+  }
+  .burger-menu {
+    position: absolute;
+    background-color: #333;
+    height: 100vh;
+    width: 85%;
+    top: 0;
+    right: 0;
+    padding-top: 50px;
+    .menu-list {
+      color: #fff;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      margin-top: 15px;
+      li {
+        margin: 5px 0;
+        font-size: 1.3em;
+        width: 100%;
+        text-align: right;
+        padding: 10px 20px;
+        font-weight: 600;
+        &.active {
+        background-color: #c4c4c4;
+        color: #333;
+        }
+      }
+    }
+  }
 }
