--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,6 @@
+@import '../../colors.scss';
+@import '../../breakpoints.scss';
+
 .navbar {
   display: flex;
   justify-content: space-around;
@@ -5,6 +8,18 @@
   background-color: #ddd;
   height: 50px;
   position: relative;
+
+  @include lg {
+    justify-content: space-between;
+    padding: 20px;
+    height: auto;
+    max-width: 1100px;
+    margin: 0 auto;
+  }
+  h2 {
+    font-size: 1.2em;
+    font-weight: 400;
+  }
   .burger-btn {
     position: relative;
     &::before,
@@ -24,7 +39,7 @@
       width: 0;
       &::after,
       &::before {
-        background-color: #fff;
+        background-color: $white;
         width: 25px;
         height: 4px;
       }
@@ -41,20 +56,20 @@
   .burger-btn::after {
     width: 30px;
     height: 3px;
-    background-color: #333;
-    border-radius: 5px;
-    transition: all .3s ease-in-out; 
+    background-color: $gray;
+    border-radius: 25%;
   }
   .burger-menu {
     position: absolute;
-    background-color: #333;
+    background-color: $gray;
     height: 100vh;
     width: 85%;
+    max-width: 300px;
     top: 0;
     right: 0;
     padding-top: 50px;
     .menu-list {
-      color: #fff;
+      color: $white;
       list-style: none;
       display: flex;
       flex-direction: column;
@@ -67,9 +82,42 @@
         text-align: right;
         padding: 10px 20px;
         font-weight: 600;
-        &.active {
-        background-color: #c4c4c4;
-        color: #333;
+        &:last-child {
+        background-color: $active-link;
+        color: $gray;
+        }
+      }
+    }
+  }
+  .logo-title {
+    display: flex;
+    align-items: center;
+    figure {
+      margin-right: 15px;
+    }
+    h2{
+      font-size: 1.2em;
+      font-weight: 400;
+    }
+  }
+  .menu-list-lg {
+    display: flex;
+    list-style: none;
+    background-color: $white;
+    padding: 10px;
+    li {
+      margin: 0 5px;
+      &:nth-child(2) {
+        &::before,
+        &::after {
+          content: "|";
+          color: $gray;
+        }
+        &::before {
+          margin-right: 10px;
+        }
+        &::after {
+          margin-left: 10px;
         }
       }
     }
