--- a/src/components/statement/statement.scss
+++ b/src/components/statement/statement.scss
@@ -1,8 +1,22 @@
+@import '../../colors.scss';
+@import '../../breakpoints.scss';
+
 .transactions {
   margin-top: 30px;
-  padding: 0 20px;
+  padding: 0 20px 20px;
+  overflow-y: auto;
+  height: 38vh;
+
+  @include md {
+    height: 60vh;
+  }
+
+  @include lg {
+    width: 65%;
+    margin-left: 10px;
+  }
   h2 {
-    font-size: 1.1em;
+    font-size: 1em;
     text-align: center;
   }
   table {
@@ -11,12 +25,52 @@
     border-collapse: collapse;
     border-spacing: 0;
     th {
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid $light-gray;
       padding-bottom: 5px;
       text-align: left;
+      font-size: .8em;
+      &:last-child {
+        text-align: right;
+        padding-right: 20px;
+      }
     }
     tr {
       margin-top: 10px;
+      td {
+        border-bottom: 1px solid $light-gray;
+        padding: 10px 0;
+        font-size: .7em;
+        &:first-child {
+          padding: 0 7px;
+          width: 25px;
+        }
+        &:last-child {
+          text-align: right;
+          padding-right: 7px;
+        }
+      }
+    }
+  }
+  .total {
+    display: flex;
+    font-size: .7em;
+    justify-content: space-between;
+    margin-top: 2px;
+    border-top: 1px solid $light-gray;
+    padding-top: 7px;
+
+    @include md {
+      padding: 7px 10px 0;
+    }
+  }
+  .total-state {
+    text-align: right;
+    font-size: .6em;
+    text-transform: uppercase;
+    margin-top: 2px;
+
+    @include md {
+      padding: 0 10px;
     }
   }
 }
