--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -16,6 +16,18 @@
     max-width: 1100px;
     margin: 0 auto;
   }
+  &.lg-nav {
+    display: none;
+
+    @include lg {
+      display: flex;
+    }
+  }
+  &.mobile-nav {
+    @include lg {
+      display: none;
+    }
+  }
   h2 {
     font-size: 1.2em;
     font-weight: 400;
